[gd_scene load_steps=92 format=2]

[ext_resource path="res://Scripts/GameManager.gd" type="Script" id=1]
[ext_resource path="res://Textures/decors/chambre.png" type="Texture" id=2]
[ext_resource path="res://Scripts/SleepFeedbacks.gd" type="Script" id=3]
[ext_resource path="res://Textures/decors/decors.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Distractions/Window/WindowDragable.gd" type="Script" id=5]
[ext_resource path="res://Textures/decors/fenetre.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Distractions/Window/WindowDistraction.gd" type="Script" id=7]
[ext_resource path="res://Sounds/Retro Cinematic Wind 02.wav" type="AudioStream" id=8]
[ext_resource path="res://Textures/meubles/tapis.png" type="Texture" id=9]
[ext_resource path="res://Textures/meubles/table_chevet.png" type="Texture" id=10]
[ext_resource path="res://Textures/meubles/lit.png" type="Texture" id=11]
[ext_resource path="res://Textures/PANDA.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Distractions/LampeDistraction.gd" type="Script" id=13]
[ext_resource path="res://Sounds/Retro Electric Sparks 22.wav" type="AudioStream" id=14]
[ext_resource path="res://Textures/triggers/lampe_on.png" type="Texture" id=15]
[ext_resource path="res://Textures/triggers/lampe_off.png" type="Texture" id=16]
[ext_resource path="res://Textures/triggers/plafonier_off.png" type="Texture" id=17]
[ext_resource path="res://Textures/triggers/plafonier_on.png" type="Texture" id=18]
[ext_resource path="res://Textures/triggers/bouton_plafonier.png" type="Texture" id=19]
[ext_resource path="res://Scripts/Clock.gd" type="Script" id=20]
[ext_resource path="res://Scripts/Distractions/Garland/Garland.gd" type="Script" id=21]
[ext_resource path="res://Textures/triggers/REVEIL/reveil.png" type="Texture" id=22]
[ext_resource path="res://Scripts/Distractions/LaptopDistraction.gd" type="Script" id=23]
[ext_resource path="res://Textures/triggers/ordi_on.png" type="Texture" id=24]
[ext_resource path="res://Textures/triggers/ordi_off.png" type="Texture" id=25]
[ext_resource path="res://Textures/triggers/fx_ordi.png" type="Texture" id=26]
[ext_resource path="res://Shaders/alpha_edge_outline.tres" type="Shader" id=27]
[ext_resource path="res://Textures/triggers/mini_bulle.png" type="Texture" id=28]
[ext_resource path="res://Scenes/SceneTransition.tscn" type="PackedScene" id=29]
[ext_resource path="res://Scripts/Hint.gd" type="Script" id=30]
[ext_resource path="res://Shaders/screen_color_edge_hint.tres" type="Shader" id=31]
[ext_resource path="res://Scenes/GarlandLight.tscn" type="PackedScene" id=32]
[ext_resource path="res://Textures/triggers/REVEIL/reveilHours.png" type="Texture" id=33]
[ext_resource path="res://Sounds/alarmClock.wav" type="AudioStream" id=34]
[ext_resource path="res://Textures/triggers/bouteille.png" type="Texture" id=36]
[ext_resource path="res://Textures/triggers/PLANTE/plante.png" type="Texture" id=37]
[ext_resource path="res://Textures/meubles/chat.png" type="Texture" id=38]
[ext_resource path="res://Scenes/phone.tscn" type="PackedScene" id=39]
[ext_resource path="res://Textures/triggers/BOURDON/boudon_spritesheet.png" type="Texture" id=40]
[ext_resource path="res://Textures/meubles/mini_plante.png" type="Texture" id=41]
[ext_resource path="res://Textures/meubles/sac_a_dos.png" type="Texture" id=42]

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_intensity = 1.0
glow_strength = 0.95
glow_blend_mode = 1

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 40 )
region = Rect2( 0, 0, 119, 119 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 40 )
region = Rect2( 119, 0, 119, 119 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 40 )
region = Rect2( 238, 0, 119, 119 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 40 )
region = Rect2( 357, 0, 119, 119 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 40 )
region = Rect2( 476, 0, 119, 119 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 40 )
region = Rect2( 595, 0, 119, 119 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "idle",
"speed": 40.0
} ]

[sub_resource type="Animation" id=19]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.263591, 0.551355, 0.795745 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 560, 220 ), Vector2( 551.356, 217 ), Vector2( 543.726, 219.186 ), Vector2( 551.883, 217 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "OpenWindow"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 540, 220 ), Vector2( 564, 315 ), Vector2( 531, 160 ), Vector2( 540, 220 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 440, 220 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 209.174, 45.1784 )

[sub_resource type="ShaderMaterial" id=67]
shader = ExtResource( 27 )
shader_param/edge_color = Color( 1.3, 1.3, 1.3, 1 )
shader_param/threshold = 1.0
shader_param/blend = 0.134

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 0, 0, 420, 426 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 0, 426, 420, 426 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 420, 0, 420, 426 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 420, 426, 420, 426 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 840, 0, 420, 426 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 840, 426, 420, 426 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 1260, 0, 420, 426 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 1260, 426, 420, 426 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 1680, 0, 420, 426 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 1680, 426, 420, 426 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 2100, 0, 420, 426 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 2100, 426, 420, 426 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 2520, 0, 420, 426 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 2520, 426, 420, 426 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 2940, 0, 420, 426 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 2940, 426, 420, 426 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 3360, 0, 420, 426 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 3360, 426, 420, 426 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 3780, 0, 420, 426 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 37 )
region = Rect2( 3780, 426, 420, 426 )

[sub_resource type="SpriteFrames" id=38]
animations = [ {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=39]
radius = 81.0
height = 138.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.2115, 20.4416 )

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 31 )
shader_param/edge_color = Color( 1, 1, 1, 1 )
shader_param/threshold = 0.517
shader_param/blend = 0.704

[sub_resource type="ImageTexture" id=14]
lossy_quality = 1.0
size = Vector2( 20, 70 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.155172, 0.814176, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 0.847059, 0.65098, 0.32549, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )
width = 32

[sub_resource type="Curve" id=7]
min_value = -4.0
max_value = 4.0
_data = [ Vector2( 0.0030722, 0.00909102 ), 0.0, 0.0, 0, 0, Vector2( 0.0537634, -2.47273 ), 0.0, 0.0, 0, 0, Vector2( 0.208909, 2.4 ), 0.0, 0.0, 0, 0, Vector2( 0.227343, -2.4 ), 0.0, 0.0, 0, 0, Vector2( 0.351767, 2.61818 ), 0.0, 0.0, 0, 0, Vector2( 0.417819, -1.81818 ), 0.0, 0.0, 0, 0, Vector2( 0.534562, -0.263636 ), 0.0, 0.0, 0, 0, Vector2( 0.542243, -3.41818 ), 0.0, 0.0, 0, 0, Vector2( 0.602151, 2.98182 ), 0.0, 0.0, 0, 0, Vector2( 0.72043, -2.47273 ), 0.0, 0.0, 0, 0, Vector2( 0.854071, 1.89091 ), 0.0, 0.0, 0, 0, Vector2( 0.996928, -0.0454545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
width = 64
curve = SubResource( 7 )

[sub_resource type="Curve" id=9]
min_value = -2.23517e-10
max_value = 0.01
_data = [ Vector2( 0, 0 ), 0.0, 0.0121845, 0, 1, Vector2( 0.130568, 0.00159091 ), 0.0, 0.0, 0, 0, Vector2( 0.385561, 0.000590909 ), 0.0, 0.0, 0, 0, Vector2( 0.545315, 0.00659091 ), 0.0, 0.0, 0, 0, Vector2( 0.680492, 0.0005 ), 0.0, 0.0, 0, 0, Vector2( 0.892473, 0.00413636 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -0.0384682, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=10]
width = 64
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.18
emission_shape = 2
emission_box_extents = Vector3( 700, 400, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0.2, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 1.0
orbit_velocity_curve = SubResource( 10 )
linear_accel_random = 0.72
linear_accel_curve = SubResource( 8 )
damping = 0.5
damping_random = 0.2
angle = 33.9
angle_random = 1.0
scale = 2.5
scale_random = 1.0
color = Color( 2, 1.5, 1, 1 )
color_ramp = SubResource( 6 )

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 27 )
shader_param/edge_color = Color( 1.30196, 1.30196, 1.30196, 1 )
shader_param/threshold = 1.0
shader_param/blend = 0.197

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 27 )
shader_param/edge_color = Color( 1.3, 1.3, 1.3, 1 )
shader_param/threshold = 1.0
shader_param/blend = 0.407

[sub_resource type="CanvasItemMaterial" id=16]
blend_mode = 1

[sub_resource type="ShaderMaterial" id=17]
shader = ExtResource( 27 )
shader_param/edge_color = Color( 1.3, 1.3, 1.3, 1 )
shader_param/threshold = 0.943
shader_param/blend = 0.35

[sub_resource type="CapsuleShape2D" id=40]
radius = 20.0
height = 80.0

[node name="Node" type="Node"]
script = ExtResource( 1 )
_win_scene_path = "res://Scenes/Screens/WinScreen.tscn"
_lose_scene_path = "res://Scenes/Screens/LoseScreen.tscn"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Outside" type="Sprite" parent="."]
position = Vector2( 391, 221 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="LevelTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 30.0
__meta__ = {
"_editor_description_": "Duration of each levels.
At the end of this timer, we start the next level.
This will add a new set of potential distractions, on top of the current one."
}

[node name="NewDistractionTriggerTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0

[node name="Window" type="Sprite" parent="."]
script = ExtResource( 7 )
level = 1
open_position = Vector2( 330, -40 )
open_rotation = 3.0

[node name="BourdonAnimatedSprite" type="AnimatedSprite" parent="Window"]
position = Vector2( 440, 220 )
frames = SubResource( 18 )
animation = "idle"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Window/BourdonAnimatedSprite"]
anims/Idle = SubResource( 19 )
anims/OpenWindow = SubResource( 20 )
anims/RESET = SubResource( 21 )

[node name="WindowDragable" type="Node2D" parent="Window"]
script = ExtResource( 5 )
source_area2D_node_path = "Window/source_Area2D"
target_area2D_node_path = "target_Area2D"

[node name="Tween" type="Tween" parent="Window/WindowDragable"]

[node name="target_Area2D" type="Area2D" parent="Window/WindowDragable"]
position = Vector2( 40, 0 )
rotation = -0.401426

[node name="target" type="CollisionShape2D" parent="Window/WindowDragable/target_Area2D"]
position = Vector2( 313.822, 480.667 )
rotation = -0.00523596
shape = SubResource( 1 )

[node name="Window" type="Sprite" parent="Window/WindowDragable"]
position = Vector2( 350, 140 )
texture = ExtResource( 6 )

[node name="source_Area2D" type="Area2D" parent="Window/WindowDragable/Window"]
position = Vector2( 161, -47 )
__meta__ = {
"_edit_lock_": true
}

[node name="source" type="CollisionPolygon2D" parent="Window/WindowDragable/Window/source_Area2D"]
position = Vector2( -1.75787, -0.559929 )
polygon = PoolVector2Array( 164.758, 51.5599, 178.758, 157.56, -258.242, 368.56, -309.242, 273.56 )

[node name="Hint" type="Sprite" parent="Window/WindowDragable/Window"]
visible = false
material = SubResource( 67 )
texture = ExtResource( 6 )
script = ExtResource( 30 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Window"]
stream = ExtResource( 8 )
volume_db = -8.0
pitch_scale = 1.16

[node name="Backgrnound" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Plant" type="Node2D" parent="."]
position = Vector2( 373, 253 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Plant"]
frames = SubResource( 38 )
speed_scale = 0.1

[node name="PlantArea2D" type="Area2D" parent="Plant"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Plant/PlantArea2D"]
position = Vector2( 43, 61 )
shape = SubResource( 39 )

[node name="Bed" type="Sprite" parent="."]
position = Vector2( 719, 441 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tapis" type="Sprite" parent="."]
position = Vector2( 922, 633 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Table_chevet" type="Sprite" parent="."]
position = Vector2( 1120, 495 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="PANDA" type="Sprite" parent="."]
position = Vector2( 770, 303 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lampe" type="Node2D" parent="."]
script = ExtResource( 13 )
hint_node_path = "Hint"

[node name="Tween" type="Tween" parent="Lampe"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Lampe"]
stream = ExtResource( 14 )
volume_db = -8.0
pitch_scale = 1.16

[node name="Off" type="Sprite" parent="Lampe"]
position = Vector2( 943, 193 )
texture = ExtResource( 16 )

[node name="On" type="Sprite" parent="Lampe"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( 924, 244 )
texture = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="Lampe"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lampe/Area2D"]
position = Vector2( 993, 301 )
shape = SubResource( 2 )

[node name="Hint" type="Sprite" parent="Lampe"]
material = SubResource( 13 )
position = Vector2( 999, 300 )
scale = Vector2( 1.4, 0.685714 )
texture = SubResource( 14 )
script = ExtResource( 30 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 650, 359 )
amount = 200
lifetime = 20.0
randomness = 1.0
process_material = SubResource( 4 )

[node name="plafonier" type="Node2D" parent="."]
script = ExtResource( 13 )
hint_node_path = "Hint"

[node name="Tween" type="Tween" parent="plafonier"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="plafonier"]
stream = ExtResource( 14 )
volume_db = -8.0
pitch_scale = 1.16

[node name="Off" type="Sprite" parent="plafonier"]
texture = ExtResource( 17 )
centered = false

[node name="On" type="Sprite" parent="plafonier"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
texture = ExtResource( 18 )
centered = false

[node name="BoutonPlafonier" type="Sprite" parent="plafonier"]
position = Vector2( 92, 393 )
texture = ExtResource( 19 )

[node name="Area2D" type="Area2D" parent="plafonier/BoutonPlafonier"]
position = Vector2( -92, -393 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="plafonier/BoutonPlafonier/Area2D"]
position = Vector2( 91.5, 393 )
rotation = -0.652753
shape = SubResource( 2 )

[node name="Hint" type="Sprite" parent="plafonier"]
material = SubResource( 12 )
position = Vector2( 92, 393 )
texture = ExtResource( 19 )
script = ExtResource( 30 )

[node name="Garland" type="Node2D" parent="."]
script = ExtResource( 21 )
level = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Garland"]
stream = ExtResource( 14 )
pitch_scale = 1.62

[node name="lightsContainer" type="Node2D" parent="Garland"]

[node name="light07" parent="Garland/lightsContainer" instance=ExtResource( 32 )]
position = Vector2( 757, 13 )
rotation = 0.652209
scale = Vector2( 0.785261, 0.818244 )

[node name="light06" parent="Garland/lightsContainer" instance=ExtResource( 32 )]
position = Vector2( 782, 46 )
rotation = 0.419487
scale = Vector2( 0.903146, 0.903146 )

[node name="light05" parent="Garland/lightsContainer" instance=ExtResource( 32 )]
position = Vector2( 817, 75 )
rotation = 0.152351

[node name="light04" parent="Garland/lightsContainer" instance=ExtResource( 32 )]
position = Vector2( 860, 95 )
rotation = -0.29098

[node name="light03" parent="Garland/lightsContainer" instance=ExtResource( 32 )]
position = Vector2( 909, 93 )
rotation = -0.462512

[node name="light02" parent="Garland/lightsContainer" instance=ExtResource( 32 )]
position = Vector2( 962, 84.9999 )
rotation = -0.691411

[node name="light01" parent="Garland/lightsContainer" instance=ExtResource( 32 )]

[node name="Laptop" type="Node2D" parent="."]
script = ExtResource( 23 )
level = 1

[node name="Tween" type="Tween" parent="Laptop"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Laptop"]
stream = ExtResource( 14 )
volume_db = -8.0
pitch_scale = 1.16

[node name="OrdiOff" type="Sprite" parent="Laptop"]
position = Vector2( 443, 604 )
texture = ExtResource( 25 )

[node name="OrdiOn" type="Sprite" parent="Laptop"]
position = Vector2( 443, 604 )
texture = ExtResource( 24 )

[node name="Hint" type="Sprite" parent="Laptop"]
material = SubResource( 15 )
position = Vector2( 443, 604 )
texture = ExtResource( 25 )
script = ExtResource( 30 )

[node name="FxOrdi" type="Sprite" parent="Laptop"]
modulate = Color( 1, 1, 1, 0.572549 )
material = SubResource( 16 )
position = Vector2( 457, 580 )
scale = Vector2( 1.16879, 1.1051 )
texture = ExtResource( 26 )

[node name="Area2D" type="Area2D" parent="Laptop"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Laptop/Area2D"]
polygon = PoolVector2Array( 347, 621, 421, 582, 432, 504, 438, 500, 519, 572, 503, 651, 413, 705 )

[node name="SleepFeedbacks" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="SleepFeedbacks"]
visible = false
anchor_left = 0.1
anchor_top = 0.85
anchor_right = 0.9
anchor_bottom = 0.95
mouse_filter = 2

[node name="BubblesContainer" type="Node2D" parent="SleepFeedbacks"]
position = Vector2( 665, 147 )

[node name="MiniBulle" type="Sprite" parent="SleepFeedbacks"]
position = Vector2( 365, 301 )
scale = Vector2( 0.603448, 0.603448 )
texture = ExtResource( 28 )
offset = Vector2( 563.186, -189.329 )

[node name="MiniBulle2" type="Sprite" parent="SleepFeedbacks"]
position = Vector2( 514, 266 )
scale = Vector2( 0.37931, 0.37931 )
texture = ExtResource( 28 )
offset = Vector2( 563.186, -189.329 )

[node name="AlarmClock" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 1144, 235 )
script = ExtResource( 20 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AlarmClock"]
stream = ExtResource( 34 )
volume_db = -5.0

[node name="Tween" type="Tween" parent="AlarmClock"]

[node name="Sprite" type="Sprite" parent="AlarmClock"]
texture = ExtResource( 22 )

[node name="Hours" type="Sprite" parent="AlarmClock/Sprite"]
texture = ExtResource( 33 )
hframes = 9

[node name="Hint" type="Sprite" parent="AlarmClock"]
material = SubResource( 17 )
texture = ExtResource( 22 )
script = ExtResource( 30 )

[node name="Area2D" type="Area2D" parent="AlarmClock"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AlarmClock/Area2D"]
polygon = PoolVector2Array( -28, -37, 0, -41, 59, -19, 56, 9, 50, 21, 18, 41, -50, 15, -58, 4, -57, -29 )

[node name="Bottle" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2( 1080, 373 )

[node name="Tween" type="Tween" parent="Bottle"]

[node name="BottleSprite" type="Sprite" parent="Bottle"]
texture = ExtResource( 36 )

[node name="Area2D" type="Area2D" parent="Bottle/BottleSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottle/BottleSprite/Area2D"]
position = Vector2( 0, -2 )
shape = SubResource( 40 )

[node name="SmallPlant" type="Sprite" parent="."]
position = Vector2( 679, 688 )
texture = ExtResource( 41 )

[node name="phone" parent="." instance=ExtResource( 39 )]
position = Vector2( 635, 521 )
level = 3

[node name="Sac" type="Sprite" parent="."]
position = Vector2( 1230, 533 )
texture = ExtResource( 42 )

[node name="Cat" type="Sprite" parent="."]
position = Vector2( 1179, 657 )
texture = ExtResource( 38 )

[node name="SceneTransitionColorRect" parent="." instance=ExtResource( 29 )]
unique_name_in_owner = true

[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="timeout" from="NewDistractionTriggerTimer" to="." method="_on_NewDistractionTriggerTimer_timeout"]
[connection signal="target_reached" from="Window/WindowDragable" to="Window" method="_on_WindowDragable_target_reached"]
[connection signal="animation_finished" from="Plant/AnimatedSprite" to="Plant" method="_on_AnimatedSprite_animation_finished"]
[connection signal="input_event" from="Lampe/Area2D" to="Lampe" method="_on_Area2D_input_event"]
[connection signal="input_event" from="plafonier/BoutonPlafonier/Area2D" to="plafonier" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Laptop/Area2D" to="Laptop" method="_on_Area2D_input_event"]
[connection signal="input_event" from="AlarmClock/Area2D" to="AlarmClock" method="_on_Area2D_input_event"]
